<resources>
    <string name="AboutDevice">"About Device"</string>
    <string name="AboutDeviceBoardId">Board ID</string>
    <string name="AboutDeviceBoardName">Board Name</string>
    <string name="AboutDeviceBoardPosition">Board Position</string>
    <string name="AboutDeviceError">Failed to read device information.\nCheck Bluetooth connection to FRIKAR.</string>
    <string name="AboutDeviceFirmwareVersion">Firmware Version</string>
    <string name="AboutDeviceFrameNumber">Frame Number</string>
    <string name="AboutDeviceProductId">Product ID</string>
    <string name="AboutDeviceSerialNumber">Serial Number</string>
    <string name="Cancel">"Cancel"</string>
    <string name="ConnectedTo">"Connected To"</string>
    <string name="ConnectingTo">"Connecting to"</string>
    <string name="ConnectTo">"Connect To"</string>
    <string name="DeviceBluetoothAdapter">"Cannot change Bluetooth adapter state!"</string>
    <string name="DeviceBluetoothOff">"Bluetooth Turned Off / Bluetooth Permissions Required"</string>
    <string name="DeviceBluetoothOn">"Turn On Bluetooth"</string>
    <string name="DeviceBluetoothPermissionsRequired">"Bluetooth Permissions Required"</string>
    <string name="DeviceConnect">"Connect"</string>
    <string name="DeviceDisconnect">"Disconnect"</string>
    <string name="DeviceDisconnectError">"Disconnect Error"</string>
    <string name="DeviceFailure">"Connection Failed!"</string>
    <string name="DevicePairingFailure">"Device pairing failed!"</string>
    <string name="DevicePairingNotSupported">"Pairing is not supported on this device!"</string>
    <string name="DevicePairingSuccess">"Device paired successfully!"</string>
    <string name="DeviceSkip">"Skip"</string>
    <string name="DeviceSkipError">"Unable to Skip"</string>
    <string name="DevicesPageTitle">"FRIKARS"</string>
    <string name="DeviceStartScan">"Start Scan"</string>
    <string name="DeviceStopScan">"Stop Scan"</string>
    <string name="DeviceSuccess">"Connection Succeeded!"</string>
    <string name="DeviceToggleAdapter">"Toggle Bluetooth"</string>
    <string name="DisconnectedFrom">"Disconnected from"</string>
    <string name="DisconnectingFrom">"Disconnecting from"</string>
    <string name="FrikarBluetoothDisabled">"Bluetooth not enabled"</string>
    <string name="FrikarConnecting">"Connecting to your most recent FRIKAR..."</string>
    <string name="FrikarConnectionLost">"Connection lost. Please reconnect to your FRIKAR..."</string>
    <string name="FrikarMissing">"No FRIKAR is paired to this device!"</string>
    <string name="FrikarNotFound">"Please wait a moment to establish a connection with the FRIKAR. If your FRIKAR cannot be found, then press 'SCAN FOR FRIKAR' to choose another FRIKAR."</string>
    <string name="FrikarNotPaired">"FRIKAR not Paired"</string>
    <string name="FrikarPause">"Pause"</string>
    <string name="FrikarReconnect">"Reconnect"</string>
    <string name="FrikarResume">"Resume"</string>
    <string name="FrikarScan">"Scan for FRIKAR"</string>
    <string name="FrikarTurnOnBluetooth">"Please turn on your Bluetooth to continue"</string>
    <string name="GoDashboardOption">"Go to Dashboard"</string>
    <string name="GoHomeOption">"Go to Home Page"</string>
    <string name="HomeCharging">"Charging"</string>
    <string name="HomeIssue">"Report an Issue"</string>
    <string name="HomeLocation">"Location"</string>
    <string name="HomePhoneKey">"Phone Key"</string>
    <string name="HomeService">"Service"</string>
    <string name="HomeStore">"Web Shop"</string>
    <string name="HomeTutorial">"Tutorial"</string>
    <string name="HomeUpdate">"FRIKAR Update"</string>
    <string name="LoginButton">"Log In"</string>
    <string name="LoginError">"Login Error"</string>
    <string name="LoginForgot">"Forgot Password?"</string>
    <string name="LoginIncorrect">"Incorrect username / password combination!"</string>
    <string name="LoginRegister">"Register New Account"</string>
    <string name="LoginRemember">"Remember me"</string>
    <string name="OverlayAssistance">"Assistance Level"</string>
    <string name="OverlayAssistanceLabel">"Green indicates the current assistance level"</string>
    <string name="OverlayBatteryRange">"Battery and Range"</string>
    <string name="OverlayBatteryRangeLabel">"Battery remaining and estimated range in"</string>
    <string name="OverlayCadence">"Gear / Cadence Level"</string>
    <string name="OverlayCadenceLabel">"Green indicates the current gear / cadence level"</string>
    <string name="OverlayLights">"Lights"</string>
    <string name="OverlayMode">"Mode"</string>
    <string name="OverlayOdometer">"Odometer"</string>
    <string name="OverlayOdometerLabel">"Distance travelled during current trip in"</string>
    <string name="OverlaySpeed">"Speed"</string>
    <string name="PolicyPrivacy">"Privacy Policy"</string>
    <string name="PolicyTermsConditions">"Terms and Conditions"</string>
    <string name="SettingsAbout">"About Podbike"</string>
    <string name="SettingsAccount">"Your Account"</string>
    <string name="SettingsAppVersion">"Current Mobile Application Version:"</string>
    <string name="SettingsDevices">"Manage Connections"</string>
    <string name="SettingsDistanceKm">"Kilometers"</string>
    <string name="SettingsDistanceM">"Meters"</string>
    <string name="SettingsDistanceMi">"Miles"</string>
    <string name="SettingsDistanceNm">"Nautical Miles"</string>
    <string name="SettingsDistanceUnit">"Distance Unit"</string>
    <string name="SettingsFrikar">"Your FRIKAR"</string>
    <string name="SettingsGeneral">"General Settings"</string>
    <string name="SettingsLanguage">"Language"</string>
    <string name="SettingsPageTitle">"Settings"</string>
    <string name="SettingsPolicies">"FRIKAR Policies"</string>
    <string name="SettingsPressureAtm">"Standard Atmospheres"</string>
    <string name="SettingsPressureBar">"Bar"</string>
    <string name="SettingsPressurePsi">"Pounds per Square Inch"</string>
    <string name="SettingsPressureUnit">"Pressure Unit"</string>
    <string name="SettingsSelectLanguage">"Select Language"</string>
    <string name="SettingsSelectUnit">"Select Unit"</string>
    <string name="SettingsSpeedKmph">"Kilometers per hour"</string>
    <string name="SettingsSpeedKn">"Knots"</string>
    <string name="SettingsSpeedMiph">"Miles per hour"</string>
    <string name="SettingsSpeedMps">"Meters per second"</string>
    <string name="SettingsSpeedUnit">"Speed Unit"</string>
    <string name="SettingsTemperatureC">"Celsius"</string>
    <string name="SettingsTemperatureF">"Fahrenheit"</string>
    <string name="SettingsTemperatureK">"Kelvin"</string>
    <string name="SettingsTemperatureUnit">"Temperature Unit"</string>
    <string name="SettingsTires">"Manage Tires"</string>
    <string name="SettingsUnits">"Units of Measurement"</string>
    <string name="SettingsUpdate">"FRIKAR Update"</string>
    <string name="StatisticAverageCadence">"Average RPM"</string>
    <string name="StatisticAverageSpeedTotal">Average Speed Total</string>
    <string name="StatisticBattery">"Battery Remaining"</string>
    <string name="StatisticCO2">"CO2 Saved"</string>
    <string name="StatisticPower">"Power Generated"</string>
    <string name="StatisticTemperature">"Interior Temperature"</string>
    <string name="StatisticTime">"Current Trip Time"</string>
    <string name="StatisticTotalDistance">"Total Distance"</string>
    <string name="TiresPair">"Pair"</string>
    <string name="TutorialAssistance">"Green indicates the current level of electric assistance, from low to high."</string>
    <string name="TutorialButtons">"Handlebars and buttons"</string>
    <string name="TutorialCadence">"Green represents the current gear/cadence setting, from low to high."</string>
    <string name="TutorialExit">"Exit"</string>
    <string name="TutorialFurther">"For further instructions check out the user manual."</string>
    <string name="TutorialHandlebars">"The controls on the handlebars in your FRIKAR can be moved in four different directions in addition to two buttons."</string>
    <string name="TutorialIntroduction">"With just a glance you can keep track of your speed and battery capacity."</string>
    <string name="TutorialLogo">"Press the logo to see statistics."</string>
    <string name="TutorialNext">"Next"</string>
    <string name="TutorialPrevious">"Previous"</string>
    <string name="TutorialScreen">"Keep track of general and warning symbols"</string>
    <string name="TutorialStart">"Let's Start!"</string>
    <string name="TutorialSymbols">"Monitor the assistance level and gear/cadence level"</string>
    <string name="TutorialWelcome">"Welcome to the Podbike Dashboard!"</string>
    <string name="UpdateAvailable">"New firmware update is available"</string>
    <string name="UpdateButtonCheck">"Check for Updates"</string>
    <string name="UpdateButtonFinish">"Finish"</string>
    <string name="UpdateButtonGet">"Get Latest Update"</string>
    <string name="UpdateButtonTransfer">"Transfer Update"</string>
    <string name="UpdateButtonUpgrade">"Upgrade"</string>
    <string name="UpdateComplete">"Firmware update complete!"</string>
    <string name="UpdateConfirmUpload">"Confirm upload of the newest version of firmware to your FRIKAR."</string>
    <string name="UpdateCurrent">"Firmware is up to date"</string>
    <string name="UpdateDisconnected">"Firmware Upgrade Disconnect"</string>
    <string name="UpdateDisconnectedInfo">"Currently waiting for the update process to complete. The application will be disconnected from the FRIKAR for the time being."</string>
    <string name="UpdateFiles">"files"</string>
    <string name="UpdateIssue">"Something went wrong. Please contact Podbike."</string>
    <string name="UpdateLast">"Last Updated:"</string>
    <string name="UpdateLicense">"License Agreement"</string>
    <string name="UpdateMissingDevice">"Missing device information. Please check that all the board are reporting the serial number in \"About Device\""</string>
    <string name="UpdateOutOf">"out of"</string>
    <string name="UpdatePageTitle">"Firmware Update"</string>
    <string name="UpdateSent">"Sent"</string>
    <string name="UpdateSending">"Sending"</string>
    <string name="UpdateTransfer">"Firmware Transfer"</string>
    <string name="UpdateTransferComplete">"Finished transferring all files!"</string>
    <string name="UpdateTransferInfo">"Currently transferring files between cloud server and FRIKAR via the mobiile application"</string>
    <string name="UpdateUpgrade">"Firmware Upgrade"</string>
    <string name="UpdateUpgradeInfo1">"Make sure the FRIKAR is stationary and in Bluetooth range of your phone."</string>
    <string name="UpdateUpgradeInfo2">"You will not be able to navigate away from this page until this process is complete."</string>
    <string name="UpdateUpgradeInfo3">"Your bike turn indicators will be blinking during the process and will restart by itself. Please do not move or switch off the bike during this operation."</string>
    <string name="UpdateVersion">"Current Firmware Version:"</string>
</resources>