<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_autoconnect_header"
        style="@style/TextBodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/ConnectingTo"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Connecting to FRIKAR" />

    <ProgressBar
        android:id="@+id/fragment_autoconnect_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fragment_autoconnect_connect_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_autoconnect_header"
        app:layout_constraintVertical_bias="0.42000002"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/fragment_autoconnect_progress_text"
        style="@style/TextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/FrikarConnecting"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_autoconnect_progress_bar" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_autoconnect_connect_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/FrikarPause"
        app:layout_constraintBottom_toTopOf="@id/fragment_autoconnect_scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_autoconnect_progress_text"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/fragment_autoconnect_scan_button"
        style="@style/PodButtonAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="72dp"
        android:paddingVertical="8dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:text="@string/FrikarScan"
        app:layout_constraintBottom_toTopOf="@id/fragment_autoconnect_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_autoconnect_connect_button" />

    <TextView
        android:id="@+id/fragment_autoconnect_footer"
        style="@style/TextBodyDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/FrikarNotFound"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_autoconnect_scan_button" />


</androidx.constraintlayout.widget.ConstraintLayout>