<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tutorial_page_one_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TutorialButtons"
        style="@style/TextHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tutorial_page_one_body_assistance_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TutorialAssistance"
        style="@style/TextBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_page_one_header" />

    <ImageView
        android:id="@+id/tutorial_page_one_body_assistance_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/tutorial_assistance_indicators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_page_one_body_assistance_text" />

    <TextView
        android:id="@+id/tutorial_page_one_body_cadence_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TutorialCadence"
        style="@style/TextBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_page_one_body_assistance_image" />

    <ImageView
        android:id="@+id/tutorial_page_one_body_cadence_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/tutorial_assistance_indicators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorial_page_one_body_cadence_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tutorial_page_one_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>