<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        style="@style/TextHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        tools:text="@string/UpdateTransfer" />

    <TextView
        android:id="@+id/body"
        style="@style/TextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@string/UpdateTransferInfo" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintVertical_bias="0.28"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/file_progress_indicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:visibility="gone"
        app:indicatorColor="#46ba35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/progress_text"
        app:layout_constraintVertical_bias="0.13"
        app:trackColor="#c4c4c4"
        app:trackStopIndicatorSize="0dp"
        app:trackThickness="8dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/progress_text"
        style="@style/TextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        tools:text="Sent 1 files out of 7 fiels"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/center"
        style="@style/TextBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="16dp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        tools:text="@string/UpdateTransferComplete"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_for_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@string/UpdateButtonCheck"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/action_negative_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:minWidth="200dp"
        android:text="@android:string/ok"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/action_negative_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/action_negative_button"
        style="@style/PodButtonAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="72dp"
        android:paddingVertical="8dp"
        android:text="@string/Cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>